fix z-index

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -44,7 +44,6 @@ body {
 	.rd {
 		padding: 1rem;
 		box-shadow: -1px 0 3px rgba(0, 0, 0, 0.3);
-		z-index: 6007;
 		&.speech {
 			background: $blue-grey-10;
 		}
